[project]
name = "claude-code-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "html2text>=2020.1.16",
  "pyyaml>=6.0",
  "click>=8.1.0",
  "flask>=2.3.0",
]

[project.scripts]
claude-code-docs = "main:main"

[tool.uv]
package = true
